--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -4,41 +4,42 @@
 
   Created by Sam Gardner on 8/26/19.
   Copyright © 2019 Pwn20wnd. All rights reserved.
+  Vietnamese localization by Tuan Hoang
 */
 
-"Bundled Resources version missing." = "Bundled Resources version missing."
-"Unsupported" = "Unsupported"
-"Restore RootFS" = "Restore RootFS"
-"Ready to restore RootFS" = "Ready to restore RootFS"
-"Re-Jailbreak" = "Re-Jailbreak"
-"Ready to re-jailbreak" = "Ready to re-jailbreak"
+"Bundled Resources version missing." = "Phiên bản Bundled Resources đang thiếu."
+"Unsupported" = "Không hỗ trợ"
+"Restore RootFS" = "Khôi phục RootFS"
+"Ready to restore RootFS" = "Sẵn sàng khôi phục RootFS"
+"Re-Jailbreak" = "Jailbreak lại"
+"Ready to re-jailbreak" = "Sẵn sàng jailbreak lại"
 "Jailbreak" = "Jailbreak"
-"Ready to jailbreak" = "Ready to jailbreak"
-"Error" = "Error"
-"Bundled Resources version is missing. This build is invalid." = "Bundled Resources version is missing. This build is invalid."
-"Days" = "Days"
-"Invalid Entry" = "Invalid Entry"
-"The boot nonce entered could not be parsed" = "The boot nonce entered could not be parsed"
+"Ready to jailbreak" = "Sẵn sàng jailbreak"
+"Error" = "Lỗi"
+"Bundled Resources version is missing. This build is invalid." = "Phiên bản Bundled Resources đang thiếu. Build này không đúng."
+"Days" = "Ngày"
+"Invalid Entry" = "Nhập vào không đúng"
+"The boot nonce entered could not be parsed" = "Boot nonce nhập vào không thể xử lý"
 "OK" = "OK"
-"The device will be restarted." = "The device will be restarted."
-"Copy boot nonce?" = "Copy boot nonce?"
-"Would you like to copy nonce generator to clipboard?" = "Would you like to copy nonce generator to clipboard?"
-"Yes" = "Yes"
-"No" = "No"
-"Copy ECID?" = "Copy ECID?"
-"Would you like to copy ECID to clipboard?" = "Would you like to copy ECID to clipboard?"
-"Failed to check for update." = "Failed to check for update."
-"An update is available." = "An update is available."
-"Already up to date." = "Already up to date."
-"An update is available." = "An update is available."
-"Already up to date." = "Already up to date."
-"SpringBoard will be restarted." = "SpringBoard will be restarted."
-"Unable to get task port for backboardd." = "Unable to get task port for backboardd."
-"Unable to make backboardd exit." = "Unable to make backboardd exit."
-"Cleaned diagnostics data." = "Cleaned diagnostics data."
-"Preference was changed. The app will now exit." = "Preference was changed. The app will now exit."
-"Preferences were reset. The app will now exit." = "Preferences were reset. The app will now exit."
-"Load Tweaks" = "Load Tweaks"
+"The device will be restarted." = "Thiết bị sẽ khởi động lại."
+"Copy boot nonce?" = "Sao chép boot nonce?"
+"Would you like to copy nonce generator to clipboard?" = "Bạn có muốn sao chép nonce generator đến clipboard?"
+"Yes" = "Có"
+"No" = "Không"
+"Copy ECID?" = "Sao chép ECID?"
+"Would you like to copy ECID to clipboard?" = "Bạn có muốn sao chép ECID đến clipboard?"
+"Failed to check for update." = "Kiểm tra cập nhật thất bại."
+"An update is available." = "Có bản cập nhật mới."
+"Already up to date." = "Đã được cập nhật."
+"An update is available." = "Có bản cập nhật mới."
+"Already up to date." = "Đã được cập nhật."
+"SpringBoard will be restarted." = "SpringBoard sẽ khởi động lại."
+"Unable to get task port for backboardd." = "Không thể lấy task port cho backboardd."
+"Unable to make backboardd exit." = "Không thể làm backboardd thoát ra."
+"Cleaned diagnostics data." = "Đã xoá dữ liệu chuẩn đoán."
+"Preference was changed. The app will now exit." = "Tuỳ chỉnh đã thay đổi. App sẽ thoát."
+"Preferences were reset. The app will now exit." = "Tuỳ chỉnh đã reset. App sẽ thoát."
+"Load Tweaks" = "Chạy Tweaks"
 "Description:\n\nThis option makes Substrate load extensions that are commonly referred to as tweaks in newly started processes.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64 SoCs (A7-A11)." = "Description:\n\nThis option makes Substrate load extensions that are commonly referred to as tweaks in newly started processes.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64 SoCs (A7-A11)."
 "Load Daemons" = "Load Daemons"
 "Description:\n\nThis option makes the jailbreak load the launch daemons located at /Library/LaunchDaemons and execute files located at /etc/rc.d.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)." = "Description:\n\nThis option makes the jailbreak load the launch daemons located at /Library/LaunchDaemons and execute files located at /etc/rc.d.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)."
