--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -41,45 +41,45 @@
 "Preferences were reset. The app will now exit." = "Tuỳ chỉnh đã reset. App sẽ thoát."
 "Load Tweaks" = "Chạy Tweaks"
 "Description:\n\nThis option makes Substrate load extensions that are commonly referred to as tweaks in newly started processes.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64 SoCs (A7-A11)." = "Description:\n\nThis option makes Substrate load extensions that are commonly referred to as tweaks in newly started processes.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64 SoCs (A7-A11)."
-"Load Daemons" = "Load Daemons"
+"Load Daemons" = "Chạy Daemons"
 "Description:\n\nThis option makes the jailbreak load the launch daemons located at /Library/LaunchDaemons and execute files located at /etc/rc.d.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)." = "Description:\n\nThis option makes the jailbreak load the launch daemons located at /Library/LaunchDaemons and execute files located at /etc/rc.d.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)."
 "Dump APTicket" = "Dump APTicket"
 "Description:\n\nThis option makes the jailbreak create a copy of the system APTicket located at /System/Library/Caches/apticket.der at its Documents directory which is accessible via iTunes File Sharing.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)." = "Description:\n\nThis option makes the jailbreak create a copy of the system APTicket located at /System/Library/Caches/apticket.der at its Documents directory which is accessible via iTunes File Sharing.\n\nCompatibility:\n\niOS 11.0-12.1.2 on arm64/arm64e SoCs (A7-A12X)."
-"Refresh Icon Cache" = "Refresh Icon Cache"
-"Description:\n\n" = "Description:"
+"Refresh Icon Cache" = "Làm mới Icon Cache"
+"Description:\n\n" = "Miêu tả:"
 "This option makes the jailbreak regenerate SpringBoard's system application installation cache to cause newly installed .app bundles to appear on the icon list." = "This option makes the jailbreak regenerate SpringBoard's system application installation cache to cause newly installed .app bundles to appear on the icon list."
 "iOS 11.0-12.2 and 12.4 on arm64/arm64e SoCs A7-A12X." = "iOS 11.0-12.2 and 12.4 on arm64/arm64e SoCs A7-A12X."
-"Disable Updates" = "Disable Updates"
+"Disable Updates" = "Vô hiệu cập nhật iOS"
 "This option makes the jailbreak effectively disable the system's software update mechanism to prevent the system from automatically upgrading to the latest available firmware which may not be supported by the jailbreak at that time." = "This option makes the jailbreak effectively disable the system's software update mechanism to prevent the system from automatically upgrading to the latest available firmware which may not be supported by the jailbreak at that time."
 "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X." = "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X."
-"Disable Revokes" = "Disable Revokes"
+"Disable Revokes" = "Vô hiệu Revokes"
 "This option makes the jailbreak effectively disable the system's online certificate status protocol system to prevent enterprise certificates which the jailbreak may be signed with from getting revoked." = "This option makes the jailbreak effectively disable the system's online certificate status protocol system to prevent enterprise certificates which the jailbreak may be signed with from getting revoked."
 "iOS 11.0-11.4.1 on arm64 SoCs A7-A11." = "iOS 11.0-11.4.1 on arm64 SoCs A7-A11."
-"Set Boot Nonce" = "Set Boot Nonce"
-"Description:" = "Description:"
+"Set Boot Nonce" = "Đặt Boot Nonce"
+"Description:" = "Miêu tả:"
 "This option makes the jailbreak set the persistent com.apple.System.boot-nonce variable in non-volatile random-access memory NVRAM which may be required to downgrade to an unsigned iOS firmware by using SHSH files." = "This option makes the jailbreak set the persistent com.apple.System.boot-nonce variable in non-volatile random-access memory NVRAM which may be required to downgrade to an unsigned iOS firmware by using SHSH files."
 "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X." = "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X."
-"Export TFP0" = "Export TFP0"
+"Export TFP0" = "Xuất TFP0"
 "This option makes the jailbreak modify the host-port to grant any process access to the host-priv-port." = "This option makes the jailbreak modify the host-port to grant any process access to the host-priv-port."
 "This option effectively grants any process access to the kernel task port TFP0 and allows re-jailbreaking without exploiting again." = "This option effectively grants any process access to the kernel task port TFP0 and allows re-jailbreaking without exploiting again."
 "This option is considered unsafe as the privilege this option effectively grants to processes can be used for bad purposes by malicous apps." = "This option is considered unsafe as the privilege this option effectively grants to processes can be used for bad purposes by malicous apps."
 "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X." = "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X.",
-"Restore RootFS" = "Restore RootFS"
+"Restore RootFS" = "Khôi phục RootFS"
 "This option makes the jailbreak restore the root filesystem RootFS to the snapshot which is created by the system when the device is restored." = "This option makes the jailbreak restore the root filesystem RootFS to the snapshot which is created by the system when the device is restored."
 "This option effectively allows uninstalling the jailbreak without losing any user data." = "This option effectively allows uninstalling the jailbreak without losing any user data."
 "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X.", = "iOS 11.0-12.1.2 on arm64/arm64e SoCs A7-A12X.",
 "Max Memory Limit" = "Max Memory Limit"
 "This option makes the jailbreak modify the Jetsam configuration file to increase the memory limit that is enforced upon processes by Jetsam to the maximum value to effectively bypass that mechanism." = "This option makes the jailbreak modify the Jetsam configuration file to increase the memory limit that is enforced upon processes by Jetsam to the maximum value to effectively bypass that mechanism."
 "iOS 11.0-12.1.2 on arm64 SoCs A7-A11." = "iOS 11.0-12.1.2 on arm64 SoCs A7-A11."
-"ReInstall OpenSSH" = "ReInstall OpenSSH"
+"ReInstall OpenSSH" = "Cài lại OpenSSH"
 "This option makes the jailbreak reinstall the openssh package." = "This option makes the jailbreak reinstall the openssh package."
 "iOS 11.0-12.1.2 on arm64 SoCs A7-A11." = "iOS 11.0-12.1.2 on arm64 SoCs A7-A11."
-"Reinstall Cydia" = "Reinstall Cydia"
+"Reinstall Cydia" = "Cài lại Cydia"
 "This option makes jailbreak reinstall the cydiainstaller package." = "This option makes jailbreak reinstall the cydiainstaller package."
 "iOS 11.0-12.1.2 on arm64 SoCs A7-A11." = "iOS 11.0-12.1.2 on arm64 SoCs A7-A11."
-"Reload Daemons" = "Reload Daemons"
+"Reload Daemons" = "Load lại Daemons"
 "This option makes the jailbreak reload all of the running system daemons to make the Substrate extensions tweaks load in them." = "This option makes the jailbreak reload all of the running system daemons to make the Substrate extensions tweaks load in them."
-"Hide Log Window" = "Hide Log Window"
+"Hide Log Window" = "Ẩn cửa sổ Log"
 "This option hides the log window or console in the jailbreak app for a more clean look." = "This option hides the log window or console in the jailbreak app for a more clean look."
 "Reset Cydia Cache" = "Reset Cydia Cache"
 "This option makes the jailbreak reset Cydia's cache." = "This option makes the jailbreak reset Cydia's cache."
@@ -95,13 +95,13 @@
 "Set CS_DEBUGGED" = "Set CS_DEBUGGED"
 "This option makes the jailbreak dynamically set the CS_DEBUGGED codesign flag for every new process." = "This option makes the jailbreak dynamically set the CS_DEBUGGED codesign flag for every new process."
 "This option makes the kernel allow processes to run with invalid executable pages." = "This option makes the kernel allow processes to run with invalid executable pages."
-"Auto Respring" = "Auto Respring"
+"Auto Respring" = "Tự động Respring"
 "This option makes the jailbreak automatically restart the SpringBoard as soon as the jailbreak process is completed without the confirmation." = "This option makes the jailbreak automatically restart the SpringBoard as soon as the jailbreak process is completed without the confirmation."
 "iOS 11.0-12.1.2 on arm64 SoCs A7-A11." = "iOS 11.0-12.1.2 on arm64 SoCs A7-A11."
 "Read-Only RootFS" = "Read-Only RootFS"
 "This option makes the jailbreak skip remounting the root filesystem as read-write when combined with the SSH-Only option." = "This option makes the jailbreak skip remounting the root filesystem as read-write when combined with the SSH-Only option."
 "iOS 11.0-12.1.2 on arm64 SoCs A7-A12." = "iOS 11.0-12.1.2 on arm64 SoCs A7-A12."
-"Jailbreaking" = "Jailbreaking"
+"Jailbreaking" = "Đang Jailbreak"
 "Unable to verify my user id." = "Unable to verify my user id."
 "Memory allocation failure: %s" = "Memory allocation failure: %s"
 "Unable to clean success file." = "Unable to clean success file."
